; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_printdlg.c_pagesetup_update_orientation_buttons.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_printdlg.c_pagesetup_update_orientation_buttons.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DMORIENT_LANDSCAPE = common dso_local global i64 0, align 8
@rad1 = common dso_local global i32 0, align 4
@rad2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @pagesetup_update_orientation_buttons to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pagesetup_update_orientation_buttons(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i64 @pagesetup_get_orientation(i32* %5)
  %7 = load i64, i64* @DMORIENT_LANDSCAPE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @rad1, align 4
  %12 = load i32, i32* @rad2, align 4
  %13 = load i32, i32* @rad2, align 4
  %14 = call i32 @CheckRadioButton(i32 %10, i32 %11, i32 %12, i32 %13)
  br label %21

15:                                               ; preds = %2
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @rad1, align 4
  %18 = load i32, i32* @rad2, align 4
  %19 = load i32, i32* @rad1, align 4
  %20 = call i32 @CheckRadioButton(i32 %16, i32 %17, i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %15, %9
  ret void
}

declare dso_local i64 @pagesetup_get_orientation(i32*) #1

declare dso_local i32 @CheckRadioButton(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
